# vn-engine

./: Cargo.toml
builtin-shaders/: text-box.wgsl  types.wgsl
src/: event.rs  graphics.rs  main.rs  script.rs
src/graphics/: framebuf.rs  image.rs  layer.rs
src/script/: lex.rs  parse.rs  span.rs  symbol.rs
