[package]
name = "vn-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2"
unicode-xid = "0.2.2"
parking_lot = "0.12"
peekmore = "1.0.0"
lazy_static = "1"
wgpu="0.15.1"
futures="0.3.26"
winit="0.28.1"